# human-tracking-repo

./: .gitignore  CODE_OF_CONDUCT.md  README.md  cleandata.py  copyfiles.py  drawpics.py  editvideo.ipynb  generate_training.py  kmeans_model.pkl  parameters.yml  pyproject.toml  requirements.txt  requirements_dev.txt  settings.yml  setup.cfg  test.py  tox.ini  track.py  track_real.py  train_model.ipynb  training.py  training_para.yml  vec.npy
.github/workflows/: tests.yml
Team_iden/exp1/: args.yaml  results.csv
Team_iden/exp12/: args.yaml  results.csv
Team_iden/exp2/: args.yaml  results.csv
Team_iden/exp_zero/: args.yaml  results.csv
Team_iden_kmean/exp_zero/: args.yaml  results.csv
Team_iden_kmean/exp_zero2/: args.yaml  results.csv
auto_generate_dataset/: create_frames.py
auto_labeling_data/: see_players_indvidually.py
playeriden/exp1/: args.yaml  results.csv
playeriden/exp2/: args.yaml  results.csv
runs/detect/train/: args.yaml  results.csv
src/virtualwebcam/: example_code.py
src/virtualwebcam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_webcam.py
