[metadata]
name = virtualwebcam
description = example project for ECE 1390/2390
author = Dr Huppert
license = MIT
license_file = LICENSE.md

platforms = unix, linux, cygwin, osx, win32
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages = virtualwebcam
install_requires =
    matplotlib>=3.0
    mediapipe>=0.10
    numpy>=1.26
    opencv-contrib-python>=4.11
    opencv-python>=4.11
    pillow>=11.2
package_dir = 
    =src

zip_safe=no

[options.extras_require]
testing = 
    pytest>=7.2
    pytest-cov>=6.1
    mypy>=1.15
    tox>4.25

[options.package_data]
virtualwebcam = py.typed

[flake8]
max-line-length = 160
exclude = .git,__pycache__,.venv
